--- a/resumechallenge.html
+++ b/resumechallenge.html
@@ -2,24 +2,24 @@
 <html>
 
 <head>
-<center>
-<div class="container">
-  <h1>Sally McSal</h1>
-  <div> <img src="http://ia.media-imdb.com/images/M/MV5BMTY5NzE3NzU3MF5BMl5BanBnXkFtZTgwMjg0NTQ5MDE@._V1_UX214_CR0,0,214,317_AL_.jpg" alt="Sally"/>
-  </div>
-</div>
-
-<title>Sally's Resume</title>
-<meta name="description" content="Example of Sally's Resume">
-
-</center>
+	<title>Sally's Resume</title>
+	<meta name="description" content="Example of Sally's Resume">
 </head>
 
 
 <body>
 
+<div class="container">
+	<center>
+  	  <h1>Sally McSal</h1>
+  		<div> <img src="http://ia.media-imdb.com/images/M/MV5BMTY5NzE3NzU3MF5BMl5BanBnXkFtZTgwMjg0NTQ5MDE@._V1_UX214_CR0,0,214,317_AL_.jpg" alt="Sally"/>
+		</div>
+    </center>
+</div>
+
+
 <header>
-    <h2>Professional Summary</h2>
+	<h2>Professional Summary</h2>
 </header>
 
 <main>
@@ -29,6 +29,8 @@
     consequat.</p>
 </main>
 
+
+<section>
 <header>
   <h2>Education</h2>
 </header>
@@ -37,6 +39,8 @@
 BA Honours, Graduated<br>
 
 <p>Lorem ipsum dolor sit amet, cu sed invenire recteque. Cu sed tamquam propriae, sit oratio consulatu at. Audire ornatus eleifend eu ius, no vel luptatum adipisci. Ut quis graece his, malorum voluptaria et per.</p>
+</section>
+
 
 <header>
   <h2>Employment History</h2>
@@ -53,6 +57,7 @@ January 2015 - May 2015
 June 2015 - November 2015
 
 <p>Ex fierent deterruisset has, nec veri animal interpretaris ex. Sensibus vituperata ei est, ex eos novum omittam noluisse. Vim doming omittam dissentias ei, nec id modus animal fierent. Cu dolore definiebas appellantur nam, ut pri veri populo accusata.</p>
+
 
 <header>
   <h2>Hobbies</h2>
